feat: add filter by seed type
